# penna

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: RELEASE.md  smoke-checklist.md
docs/superpowers/plans/: 2026-06-14-penna-viewer-mvp.md
docs/superpowers/specs/: 2026-06-14-penna-viewer-design.md
e2e/: wdio.conf.ts
e2e/specs/: open-render.e2e.ts
src/: main.test.ts  main.ts  types.test.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  loader.rs  main.rs  settings.rs  watcher.rs  window.rs
src/__tests__/: security.test.ts
src/markdown/: highlight.test.ts  highlight.ts  links.test.ts  links.ts  markdown-it-plugins.d.ts  renderer.test.ts  renderer.ts  sanitize.test.ts  sanitize.ts
src/styles/: markdown.css  theme.css
src/ui/: autoReload.test.ts  autoReload.ts  contentClick.test.ts  contentClick.ts  dropzone.test.ts  dropzone.ts  find.test.ts  find.ts  settingsPanel.test.ts  settingsPanel.ts  theme.test.ts  theme.ts  zoom.test.ts  zoom.ts
tests/: capabilities.test.ts  smoke.test.ts  tauri-conf.test.ts
