[package]
name = "penna"
version = "0.1.0"
description = "A lightweight Markdown / plain-text viewer"
authors = ["penna"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "penna_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry", "common-controls-v6", "dynamic-acl"] }
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chardetng = "0.1"
encoding_rs = "0.8"
notify = "6"

